# ChangeLog for app-admin/sysstat
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/sysstat/ChangeLog,v 1.271 2014/09/24 10:43:46 nimiux Exp $

  24 Sep 2014; Chema Alonso <nimiux@gentoo.org> sysstat-11.0.0.ebuild:
  Stable for amd64 wrt bug #520940

*sysstat-11.1.1 (09 Sep 2014)
*sysstat-11.0.1 (09 Sep 2014)

  09 Sep 2014; Jeroen Roovers <jer@gentoo.org> +sysstat-11.0.1.ebuild,
  +sysstat-11.1.1.ebuild:
  Version bump.

  06 Sep 2014; Jeroen Roovers <jer@gentoo.org> sysstat-11.0.0.ebuild:
  Stable for HPPA (bug #520940).

  01 Aug 2014; Raúl Porcel <armin76@gentoo.org> sysstat-10.2.1-r1.ebuild:
  sparc stable wrt #509340

  20 Jul 2014; Tobias Klausmann <klausman@gentoo.org> sysstat-10.2.1-r1.ebuild:
  Stable on alpha, bug #509340

  11 Jul 2014;  <tgall@gentoo.org> sysstat-10.2.1-r1.ebuild:
  Stable on arm64 wrt Bug #509340

*sysstat-11.0.0 (23 Jun 2014)

  23 Jun 2014; Jeroen Roovers <jer@gentoo.org> -sysstat-10.3.1.ebuild,
  +sysstat-11.0.0.ebuild:
  Version bump.

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  sysstat-10.2.1-r1.ebuild:
  x86 stable wrt bug #509340

  10 Jun 2014; Mike Frysinger <vapier@gentoo.org> sysstat-10.2.1-r1.ebuild:
  Add arm64/m68k/s390/sh love.

  24 May 2014; Markos Chandras <hwoarang@gentoo.org> sysstat-10.2.1-r1.ebuild:
  Stable on amd64 wrt bug #509340

  17 May 2014; Sven Vermeulen <swift@gentoo.org> sysstat-10.2.0.ebuild,
  sysstat-10.2.1-r1.ebuild, sysstat-10.3.1.ebuild:
  Fix bug #509740 - Add USE=selinux dependency to sec-policy/selinux-sysstat

  02 May 2014; Jeroen Roovers <jer@gentoo.org> sysstat-10.2.1-r1.ebuild:
  Stable for HPPA (bug #509340).

*sysstat-10.3.1 (21 Mar 2014)

  21 Mar 2014; Jeroen Roovers <jer@gentoo.org> +sysstat-10.3.1.ebuild:
  Version bump.

*sysstat-10.2.1-r1 (01 Feb 2014)

  01 Feb 2014; Jeroen Roovers <jer@gentoo.org> -sysstat-10.2.1.ebuild,
  +sysstat-10.2.1-r1.ebuild: