@@ -12,24 +12,14 @@ DIST sysstat-11.1.1.tar.xz 295372 SHA256 36e86672c415027d633f6f036b88cde1f87b0fb
 EBUILD sysstat-10.2.0.ebuild 1839 SHA256 46656b63210a89fee327fabe65d78b5d8b57169b9ec871442b95d54b44d49a7c SHA512 d7bebd3f066108d9fad40743173ba8cd35696fc156968a648083bba49454945b23c0a5b8239bf5161fe6e1b9a6620a804e95fbdad0fba283adeb98ba2297f19b WHIRLPOOL 1ea07b3f0bc283d7c296b3735c8f384268ae50411d81a5fa7a8333f1f086074b7aec1e1a96b736dfbf44fa172622363635f78fb27a77557251cf9d3f6bfc67ba
 EBUILD sysstat-10.2.1-r1.ebuild 1932 SHA256 cd02523aeb8ceb4a0ca550eeab5ef8cabb4b791350df68f0d352a88772a4596d SHA512 66a48809131bd04cb99c4fcde9307b9e7d641ca191ac654c2c427105c19b324c6d0e9dec9fcd628feaa489532cdb668743071093999efd8df5b7ce21d33b48b1 WHIRLPOOL 93b9bbdb44740bd207a601cd6c5cb943d957c26e7f750e252ab4bc671c934cd40589b199bb4a076140de05c136c321fd05375c69caab1fc79a8a5577fddcae36
 EBUILD sysstat-11.0.0.ebuild 1932 SHA256 260723a0d3630f78fa88e7580c5dff8ea084b58ad90ab9a0767cf2c721d81d6f SHA512 b5365e1b0035fcdcb8199b140cb5b97933b9d6823d99f5090bf3a679d5231b49a187d5a27fb1ffe25c90a1ccff74d6a29eb24938a229a7121650d8cce9a7f025 WHIRLPOOL 4f94ec7527a3e9d4f1c6dc9efbdfe93ef99c7dac8fd5a4f651de7fd9348baa8f9a59820cd8ce0693e9db272c1ae4c6a326c12f8659934cbee15a8eac61a6908b
-EBUILD sysstat-11.0.1.ebuild 1930 SHA256 54895a7346e170435accc222563a9378fc019370ccf216319d47a114ae44c422 SHA512 f9477085d65c74e2c8660a12bd2e1c73c471a64b29e8aec6e9fdbc18835be5411afed8e7483755211b3f5a19b3c614d27de0148bcafd1e966f4ef42c0157024d WHIRLPOOL f1f71a5e32236b43714035a056cb83423e987433298c1cc0f9e91abf102db1d7b9ea3d921980aaa86859f6a3265e903eba64e888b1aef125f304223f7701b31f
-EBUILD sysstat-11.1.1.ebuild 1853 SHA256 0942c50f3ee05eb10175140eb150cbe59c6bb8c22d9debc51cbec3a9546718e6 SHA512 1a14c3f93b9e9dd82c651ec855b41141f0eeffd93e449ddce164e98c8438c6fb8604f9e2bc3c8423ed0734a862c063769162572e6e455ffacfcbaa46b5304e51 WHIRLPOOL e6745dd0e34305e2c52429a405ce92a1ecf59cd289fdc1d6201933ccd0049932e3055859c76b1552c03b505178f8f8c13d6fa22106ceaff4c861141783fbd3dc
-MISC ChangeLog 33909 SHA256 fe34f445ebd59028fff78739377a4996396b6896b87f6e8f6ecf619925bc1cfa SHA512 ce50c89ff8b39324efa2fe25cd4cecae43ff9ca02fb87333c0e946b273da9c82c0e236aee20d8cadc70dfd2f9f716524908bf81797be339f10cf672e1a9fd4a5 WHIRLPOOL df1e65fbcc678dc92f728277faefd3891b8df041c46b7d0946e144c6e859c6d6467defb190fb9936d28a85c73ac4fd90e3790d7437676579e3e0b925425d548b
+EBUILD sysstat-11.0.1-r1.ebuild 1920 SHA256 67043be5feb617888409317b9341d44c87df7b9950d6340a3b2bc596adfa4775 SHA512 32bc2a714beefafdf0c1674fdb66881e621e88d141731ccfcb5bbd54a75de17235295325180ffa95d70cea8f9b67f2bc2b17e195aef087da19e6e6a62b9dc6af WHIRLPOOL d140abe1315396d3678b0eb3197c16772624f389bcff71c2afbd619b7adb6be7f653ba684716c79d6316cb0580acc4f6519a6dc7e107b3ccd750c4687f92dc11
+EBUILD sysstat-11.1.1-r1.ebuild 1843 SHA256 0873955280b2aa9715f75161ec370f2bed9f606f773c4a1f481ba025b84feb3e SHA512 bb993da08ad9947dd34daf88c535bfff14b338a4595bbbee67706cc218623a2554ec31e11965252a76eaedbfa2654ccb48d4ccc132d4ba87ba03dfa7f1c0b1d3 WHIRLPOOL f1d3873e82eadaddcbd6efabf1a576d9feb050142e952604c888430cd43ad3104f1f0a94f9b14b2c3b08f8d245a743be906d79add7473edd39d3f0a41d2c586f
+MISC ChangeLog 34239 SHA256 fc40fecf68a707b8b0c4e986732f708dfa400c3c5db8a2f74a19e1d1df2d56e0 SHA512 34532dbe97ecc5047d217a9365109a57506de1e66b6d51ebb672a6743e616470d9cd46fce32525fe6b653b64079266095ce93762663708a742f86fe55987cce8 WHIRLPOOL 40d14839ee17b0cf2619ab53d3cdafc58f1ef4dc58b4e1395a0ddec8fd92537e6f7eea39df4eb4e5a601cb0c0cfba3b24ac5caa86ef24dfcd2ee206d2b9b0cf7
 MISC metadata.xml 395 SHA256 90a23fcc0a01b4de0db48afe58aa046e2478075af5bf1b0d9b1c17f016bf945f SHA512 db36af13300611f0c11fb967217c0030f8f7c1100d16cd11566bc4b8d7e3a7bde27a3b037c8f63b60048f7310be1a41cb2deb9154a89dcfa106bda8848cfc6ab WHIRLPOOL a2df1837523416523f96cf52bbd2ef24f6756c6711c217ec6e3fca7daf7c8bca03260b5c9299d630a0cfa2d6491672c1f8e6927d903342b56d164fab0e8ad57a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUIqC6AAoJEH/rgyzyU9sVJyQP/0vocBJGpo6+Rnq1ARO6mbZm
-SOq7Ryl/nyM0+uEMB8O+Rt92+pkl0cXzvp23YWm7JeaZYnptP674FfeNmIGbAapq
-PGOxNi3n4tl017U/EoRSWZ2RFwdNrGKKKIjZVxZuuba6Fo0GPglm9u1/M7KOIG+5
-td4N/IoawxHkVGibnuuH5jmAV3b7VxFZafdC2hISbGiYncJVCnAwJ1Eik0LUCt7f
-tPKNnCbCsnUIBu0ipgyE1grJtCkFjlgnpa2td5iikopqs1UtLYcQ5UFp2sIQvcAl
-NanoT32Woa8q3HwPVMu92nXXGzo9o+H3TxdbRmT7FMKqEP/oo2nZJw4vSmpQZmHU
-NVRcP6YNRdTJ4vDKInmEg5vtQvricGP8r6rf9CKNCGlGwZCGY5/xaqTivkhpS59V
-/ctVczhGTL03OFaId1I2nsCz5kg3AKo6PLi28wZmcaYgFeBBN8Tm2/7/C9h/rU2Q
-GGNdhduXGuWsR1/lqC9YzSh2B90vjw2MPa8GjUteWUBORlE3KSQRr9gSXNMoFgXY
-htQSbbZouxCo4E5GY03sTPtoBH9Se13zA/uQ4xgB/dR8V7RfbWAppP30wBxoWJIx
-qr5SqxjSbbLPgBFiM673dVnSCQf2bBSZwy/4+e1A4z2QTtHyPmodbNJqGJneI3Ts
-YBCBIij8Fw2d97TJTU9n
-=g2Y3
+iEYEAREIAAYFAlQlK4kACgkQVWmRsqeSphPAXwCeOIl4Bgie0UsaF2Yd5SwKrPx4
+O4EAn1IpJlmgT3c+CPeNzM7BB9NXXnPb
+=I0Gw
 -----END PGP SIGNATURE-----
