@@ -4,10 +4,10 @@ DESCRIPTION=Suspend and hibernation utilities
 EAPI=5
 HOMEPAGE=http://pm-utils.freedesktop.org/
 IUSE=alsa debug ntp video_cards_intel video_cards_radeon
-KEYWORDS=~alpha amd64 arm ~ia64 ~mips ~ppc ~ppc64 ~sparc x86
+KEYWORDS=~alpha amd64 arm ~ia64 ~mips ppc ppc64 sparc x86
 LICENSE=GPL-2
 RDEPEND=!<app-laptop/laptop-mode-tools-1.55-r1 !sys-power/powermgmt-base[-pm-utils(+)] sys-apps/dbus >=sys-apps/util-linux-2.13 sys-power/pm-quirks alsa? ( media-sound/alsa-utils ) ntp? ( || ( net-misc/ntp net-misc/openntpd ) ) amd64? ( !video_cards_intel? ( sys-apps/vbetool ) ) x86? ( !video_cards_intel? ( sys-apps/vbetool ) ) video_cards_radeon? ( app-laptop/radeontool )
 SLOT=0
 SRC_URI=http://pm-utils.freedesktop.org/releases/pm-utils-1.4.1.tar.gz
 _eclasses_=eutils	32548a82e42dc26e3312581476d2f20c	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=1d8fae955661e1ce7693664aedb1923a
+_md5_=d01bff7f39da1095123ea0609d87a07d
