@@ -18,17 +18,17 @@ AUX power.d/usb_bluetooth 1121 SHA256 f2f06d4a7179edf51a0022ca0f6d61b5013ace1f94
 AUX sleep.d/50unload_alx 316 SHA256 7325ffde4b6cbb70eecfeafb301df4a053fe1db11cd3314275cdb3ca3af38a04 SHA512 64e7f77088a6157c90024d26ae6afde40abffc17d8ec2775e6a4ed17fac6c6fc1787c9f1b02cd0f4cd9e18dd74502f84e894006875b7dcacc39e509b3e0d86b0 WHIRLPOOL a5bc946803a0bedd84ff60938dcf98dd25b76374a8d9772475ff15d3d4807f51ef4b65b2ffad401e08a9b0b2b946a540155c5a0fc7ca884eeac85c90f79bbf60
 DIST pm-utils-1.4.1.tar.gz 208687 SHA256 8ed899032866d88b2933a1d34cc75e8ae42dcde20e1cc21836baaae3d4370c0b SHA512 5bc9479fe75f120aee136befeb24c8d7d85f61410b551177ed61fd1b4ea9cce7989796b067e357ea93b44b4ae9f66311687066f188236c5efdfd3750695a8017 WHIRLPOOL 7bf4752d96af776c90eb2d0319d615be157c8289551c72edb0c7fed05aeebbdc729f405d5ff04de401f4c12bfb8801e8b80242c3ba28e7b973442e51bf2374a3
 EBUILD pm-utils-1.4.1-r2.ebuild 1761 SHA256 bbae10e14ccde3123c934f9ab154bd0bdf18f5855cfa31d152c30c5e5a4590d1 SHA512 d85da0c40773c8681cf7e9811b14a38712c07535014cd246818b07292c86315c9c4cedace3d59faadc3c6d0c8764f28040690303b769666ec09881afb7706add WHIRLPOOL de9c8f73fa0e1c8a8a4fd02edd364a9239bda6cc5685cde39767f5e7e0a37dee3ad689c359c6d196b7d72ef862eb4ced005401fb1d307c5ff842eeaaa09ddb08
-EBUILD pm-utils-1.4.1-r6.ebuild 3034 SHA256 63c8ffa9e95ded44f66413449f4a5572078f5219f6706321b0d2938897cd3bbf SHA512 8e20f5c5d7c4ffa4af6916ef015e5b54cabd0254e6c6d7568c86fc84e1c941e01d911bf7feadeff796c9af9de78ec5496c4e4a70c146245866b6461b6bf0aaad WHIRLPOOL 479c715182d421a50d73df3d331b702d3c15b46001073bac0d787e85fd551b6ce85ff7b68140da54f2bd3fb5c402bb7c2e77dbceea7ac32bc42b750fd081f263
-MISC ChangeLog 12001 SHA256 34b582141f06c2d72d08288f86c258f471ffb60eaedf84f090b68f73ea2258be SHA512 4e141919ef8b13ee60d163fa5d6f82db76df5c7af70c7fdea14de3eab9e4c45bf3b3a75c9f52a813dee73700ee5702993afac26014b29d163a0b8f475f09dbf8 WHIRLPOOL 952780de6da7ce416082ce1bea1a3598a0ce2cbf0c20c8650c00d8a5320dbe4e88c80e085894caa14cdcb291f398b7a59b819fd337e670ac75b666bcdf20d372
+EBUILD pm-utils-1.4.1-r6.ebuild 3031 SHA256 3a2e2f6a9c4a1206984290d2f1d5173f2c5b8c6551694c904df73e8a3096dac7 SHA512 36942f9c6adbedf8bf49c8287506f21f502bd8d8df0fb5675dd6d71925b8ba6c88ed81aebae72da0b29f443c6990c92654066f10e30609b6cd07231da2d33415 WHIRLPOOL 499fa405f2e9ae1a8be21f0822cff25de45193ad4d54ceb67ad98f87f4bb70c1af27473bc39345162d37640a918d22ddf2e362bc14575e140b465d1687630316
+MISC ChangeLog 12119 SHA256 9f7313a003f0bb22b6d61da15379e031e25e834092cbe22fdeb7bdfa1f6c63b1 SHA512 7255bc5872ec8df7af8ca4398e3fb6c15063526a856074014959a886a87a07ae02688705c8cd8b2069ae751569dd16ce6a54b0b2c27fc22354d2a1111a08f082 WHIRLPOOL 277ed3ee230c52a9f019006a006649e496aac610f86af669de4d9c57f8fb8b7235b3b38b601d4387374b2ac1ad0d4264601468131956c0a4a688ff8cb6508311
 MISC metadata.xml 333 SHA256 f06c34f767b411fcbc763a18bfd022d40fd4eb7fb38d3d14473a47064685bbda SHA512 d8b286df144605f4e3657716212c1abb1b87c3ec2f1c55635e20902bcba0e3db1dccfc61ad5756112614765178a382f47a6075a1f3fbb5f7d0847f8198d0c914 WHIRLPOOL 1d4a80ba7c144b26b8e6e56592b375df545742da7cd9336d759d0e9e3861450d21d24cac8bea42d78126e989e2b06bff837f532c6e96b37697d52e2608160d94
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUJA9NAAoJEEdUh39IaPFNC0UH/jy82ugadBwEHzps82lm9uGQ
-/pPxkTb/xKD3dFrJrSF9AFsX4Eajho9wHFsY6TiD72v5HYssPgHQ6PVFwFagfn1k
-nXJmBC20Nj+FXST1to/1WJNADKviI/jkk6u/4IF4IA1QmToDaR5SuwkMZ2xzeuUJ
-N7QbhNEhI8mtfOTwuPaq+O/jN8ArqktrnU+6qNBHV0q3B5+N8cDo9bWAwVCx/t9O
-ggZorzIWihHIGQCsRcx/ygnKvBJAlaoOvW8Ia5MH8G7owb7l1xZFDJZjagFHKLhI
-D2lz+sDuqERMbaes1T2FY0gFtQsxA3AJ9KwrxpBrL2u1GLuyjDvnpcnuZFoMcGY=
-=+EL3
+iQEcBAEBCAAGBQJUJS40AAoJEEdUh39IaPFNBNYIAKKosRcCjHyD8M2+l75+PYAl
+IAZ4f3U70v7R8B/+fk7I61G976WJA4tkr8Jzj/9CaGOx/Skw145oro4+J6zDmnxC
+IaHoaFm7ZCt0VMlrSpTFTk1mfdnX8atIeMq2oS+nH18NbSRqzSpOCvfI1T5yo1GQ
+45DQrAUEuatP+F7YSbZg74I5i9czOZobZTzCfgVZwf/JIvt7//JOLjaYkpRDhmdR
+78YB0E5ZFEZsZyO8Yq7jEOWfX3SleOGrXjJnP2ijInaoH6Vf+SPoaQ4l83V2zIl9
+zK32UQVdO3SdEhi9ekQdiHqXCNVIb1DwyRsjn7UuIzLu7E4aHydqCM81n4JWlCE=
+=T5Z3
 -----END PGP SIGNATURE-----
