@@ -1,6 +1,9 @@
 # ChangeLog for sys-power/pm-utils
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/pm-utils/ChangeLog,v 1.74 2014/09/25 12:53:21 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/pm-utils/ChangeLog,v 1.75 2014/09/26 09:13:24 ssuominen Exp $
+
+  26 Sep 2014; Samuli Suominen <ssuominen@gentoo.org> pm-utils-1.4.1-r6.ebuild:
+  ppc/ppc64/sparc stable wrt #520110
 
   25 Sep 2014; Samuli Suominen <ssuominen@gentoo.org> pm-utils-1.4.1-r6.ebuild:
   amd64/x86 stable wrt #520110
